Move MetalavaRunner code to MetalavaTask subclasses
Currently MetalavaRunner has a lot of top level functions. Moving them to inside of MetalavaTask or its subclasses will allow simplifying some of them to use properties of the tasks directly.

Bug: 555294492
Test: ./gradlew checkApi
Change-Id: I3eacffeb328527e5ff7733eae1c1b64a7e5775f8