@@ -17,12 +17,16 @@
 package androidx.build.metalava
 
 import androidx.build.getSupportRootFolder
+import java.io.ByteArrayOutputStream
 import java.io.File
 import javax.inject.Inject
 import org.gradle.api.DefaultTask
 import org.gradle.api.file.ConfigurableFileCollection
+import org.gradle.api.file.FileCollection
 import org.gradle.api.file.RegularFileProperty
+import org.gradle.api.provider.ListProperty
 import org.gradle.api.provider.Property
+import org.gradle.api.provider.SetProperty
 import org.gradle.api.tasks.CacheableTask
 import org.gradle.api.tasks.Classpath
 import org.gradle.api.tasks.Input
@@ -31,6 +35,9 @@ import org.gradle.api.tasks.Internal
 import org.gradle.api.tasks.Optional
 import org.gradle.api.tasks.PathSensitive
 import org.gradle.api.tasks.PathSensitivity
+import org.gradle.process.ExecOperations
+import org.gradle.workers.WorkAction
+import org.gradle.workers.WorkParameters
 import org.gradle.workers.WorkerExecutor
 import org.jetbrains.kotlin.gradle.dsl.KotlinVersion
 
@@ -67,5 +74,91 @@ constructor(@Internal protected val workerExecutor: WorkerExecutor) : DefaultTas
             add(configFile.get().asFile.absolutePath)
         }
         runMetalavaWithArgs(metalavaClasspath, allArgs, kotlinSourceLevel.get(), workerExecutor)
+    }
+
+    fun runMetalavaWithArgs(
+        metalavaClasspath: FileCollection,
+        args: List<String>,
+        kotlinSourceLevel: KotlinVersion,
+        workerExecutor: WorkerExecutor,
+    ) {
+        val allArgs =
+            args +
+                listOf(
+                    "--hide",
+                    // Removing final from a method does not cause compatibility issues for
+                    // AndroidX.
+                    "RemovedFinalStrict",
+                    "--warning",
+                    "UnresolvedImport",
+                    "--kotlin-source",
+                    kotlinSourceLevel.version,
+
+                    // Metalava arguments to suppress compatibility checks for experimental API
+                    // surfaces.
+                    "--suppress-compatibility-meta-annotation",
+                    "androidx.annotation.RequiresOptIn",
+                    "--suppress-compatibility-meta-annotation",
+                    "kotlin.RequiresOptIn",
+
+                    // Skip reading comments in Metalava for two reasons:
+                    // - We prefer for developers to specify api information via annotations instead
+                    //   of just javadoc comments (like @hide)
+                    // - This allows us to improve cacheability of Metalava tasks
+                    "--ignore-comments",
+                    "--hide",
+                    "DeprecationMismatch",
+
+                    // Don't track annotations that aren't needed for review or checking compat.
+                    "--exclude-annotation",
+                    "androidx.annotation.ReplaceWith",
+                    "--exclude-annotation",
+                    "androidx.compose.runtime.ComposableInferredTarget",
+                    "--exclude-annotation",
+                    "androidx.compose.runtime.ComposableTarget",
+                    // internal annotation, includes debug information and values are not constant
+                    "--exclude-annotation",
+                    "androidx.compose.runtime.internal.FunctionKeyMeta",
+
+                    // This issue is important for stubs generation, which we don't do here.
+                    "--hide",
+                    "InheritChangesSignature",
+                )
+        val workQueue = workerExecutor.processIsolation()
+        workQueue.submit(MetalavaWorkAction::class.java) { parameters ->
+            parameters.args.set(allArgs)
+            parameters.metalavaClasspath.set(metalavaClasspath.files)
+        }
+    }
+
+    interface MetalavaParams : WorkParameters {
+        val args: ListProperty<String>
+        val metalavaClasspath: SetProperty<File>
+    }
+
+    abstract class MetalavaWorkAction
+    @Inject
+    constructor(private val execOperations: ExecOperations) : WorkAction<MetalavaParams> {
+        override fun execute() {
+            val outputStream = ByteArrayOutputStream()
+            var successful = false
+            try {
+                execOperations.javaexec {
+                    // Intellij core reflects into java.util.ResourceBundle
+                    it.jvmArgs = listOf("--add-opens", "java.base/java.util=ALL-UNNAMED")
+                    it.systemProperty("java.awt.headless", "true")
+                    it.classpath(parameters.metalavaClasspath.get())
+                    it.mainClass.set("com.android.tools.metalava.Driver")
+                    it.args = parameters.args.get()
+                    it.standardOutput = outputStream
+                    it.errorOutput = outputStream
+                }
+                successful = true
+            } finally {
+                if (!successful) {
+                    System.err.println(outputStream.toString(Charsets.UTF_8))
+                }
+            }
+        }
     }
 }
